<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp">

    <ImageView
        android:id="@+id/item_cover"
        android:layout_width="240dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_diary" />

    <TextView
        android:id="@+id/item_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_emoji"
        app:layout_constraintBottom_toBottomOf="@+id/item_date"
        app:layout_constraintEnd_toStartOf="@+id/item_cover"
        app:layout_constraintStart_toEndOf="@+id/item_date"
        app:layout_constraintTop_toTopOf="@+id/item_date" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/memory_title"
        app:layout_constraintBottom_toTopOf="@+id/item_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="8"
        android:maxLines="4"
        android:text="@string/location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/item_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/item_location"
        app:layout_constraintTop_toBottomOf="@+id/item_location" />

</androidx.constraintlayout.widget.ConstraintLayout>