<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/a_memory_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/memory_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_memory_title"
        app:layout_constraintStart_toStartOf="@+id/add_memory_title" />

    <EditText
        android:id="@+id/add_memory_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="12"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/a_main"
        app:layout_constraintStart_toStartOf="@+id/a_main" />

    <TextView
        android:id="@+id/a_feeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeling"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/a_memory_title"
        app:layout_constraintEnd_toEndOf="@+id/add_feeling" />

    <Spinner
        android:id="@+id/add_feeling"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/add_memory_title"
        app:layout_constraintEnd_toEndOf="@+id/add_main"
        app:layout_constraintTop_toTopOf="@+id/add_memory_title" />

    <TextView
        android:id="@+id/a_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/main_text"
        app:layout_constraintBottom_toTopOf="@+id/add_main"
        app:layout_constraintStart_toStartOf="@+id/add_main" />

    <EditText
        android:id="@+id/add_main"
        android:layout_width="374dp"
        android:layout_height="200dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="@+id/add_main"
        app:layout_constraintTop_toBottomOf="@+id/add_main" />

    <TextView
        android:id="@+id/add_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/a_date"
        app:layout_constraintTop_toBottomOf="@+id/a_date" />

    <TextView
        android:id="@+id/a_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@+id/add_date"
        app:layout_constraintTop_toBottomOf="@+id/add_date" />

    <TextView
        android:id="@+id/add_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxEms="12"
        app:layout_constraintStart_toStartOf="@+id/a_location"
        app:layout_constraintTop_toBottomOf="@+id/a_location" />

    <Button
        android:id="@+id/add_media_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_media"
        app:layout_constraintBottom_toBottomOf="@+id/add_date"
        app:layout_constraintEnd_toEndOf="@+id/add_main"
        app:layout_constraintTop_toTopOf="@+id/add_date" />

    <Button
        android:id="@+id/add_curr_loc_button"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_mylocation"
        app:layout_constraintBottom_toBottomOf="@+id/add_location"
        app:layout_constraintEnd_toEndOf="@+id/add_media_button"
        app:layout_constraintTop_toTopOf="@+id/add_location" />

    <Button
        android:id="@+id/add_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/add_main" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="@+id/add_cancel_button"
        app:layout_constraintEnd_toEndOf="@+id/add_main" />

    <ImageView
        android:id="@+id/add_added_media"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/add_cancel_button"
        app:layout_constraintEnd_toStartOf="@+id/add_button"
        app:layout_constraintStart_toEndOf="@+id/add_cancel_button"
        app:srcCompat="@drawable/default_diary" />
</androidx.constraintlayout.widget.ConstraintLayout>